# clibspi

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.py  build32.bat  build64.bat  buildEclipse.sh  buildMake.sh
examples/: CMakeLists.txt  sleepWrapper.h
examples/io/: CMakeLists.txt
examples/io/io_example_button/: io_example_button.c
examples/io/io_example_led/: io_example_led.c
examples/io/io_example_reset/: io_example_reset.c
examples/spi/: CMakeLists.txt
examples/spi/spi_example_dpa/: CMakeLists.txt  DPA.h  spi_example_dpa.c
examples/spi/spi_example_idf/: CMakeLists.txt  spi_example_idf.c
examples/spi/spi_example_pgm_hex/: CMakeLists.txt  spi_example_pgm_hex.c
examples/spi/spi_example_pgm_iqrf/: CMakeLists.txt  spi_example_pgm_iqrf.c
examples/spi/spi_example_pgm_trcnfg/: CMakeLists.txt  spi_example_pgm_trcnfg.c
examples/spi/spi_example_readmem/: CMakeLists.txt  spi_example_readmem.c
examples/spi_example_dpa/: spi_example_dpa.c
examples/spi_example_idf/: CMakeLists.txt  spi_example_idf.c  spi_example_idf.h
examples/spi_example_pgm_hex/: spi_example_pgm_hex.c
examples/spi_example_pgm_iqrf/: spi_example_pgm_iqrf.c
examples/spi_example_pgm_trcnfg/: CMakeLists.txt  spi_example_pgm_trcnfg.c
examples/spi_example_readmem/: spi_example_readmem.c
include/: CMakeLists.txt  errors.h  iqrf_gpio.h  machines_def.h  spi_iqrf.h  sysfs_gpio.h
spi_iqrf/: CMakeLists.txt  README.md  iqrf_gpio.c  spi_iqrf.c
spi_javastub/: CMakeLists.txt  com_microrisc_spi_SimpleSPI_Master.h  spi_javastub.cpp
spi_javastub/old/: rpi_spi_iqrf_javastub.c
sysfs_gpio/: CMakeLists.txt  sysfs_gpio.c
